kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops-app
  template:
    metadata:
      labels:
        app: devsecops-app
    spec:
      containers:
      - name: devsecops-app
        image: 975050176248.dkr.ecr.ap-south-1.amazonaws.com/devsecops-app:latest
        ports:
        - containerPort: 3000
