kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-internal
spec:
  podSelector:
    matchLabels:
      app: devsecops-app
  policyTypes:
  - Ingress
